-edit design Set Location Task

--- a/app/src/main/res/values-b+fil/strings.xml
+++ b/app/src/main/res/values-b+fil/strings.xml
@@ -211,5 +211,5 @@
     <string name="thirty_minutes_in_advance">30 minutong maaga</string>
     <string name="a_day_ago">1 araw ang nakalipas</string>
     <string name="two_days_ago">2 araw ang nakalipas</string>
-
+    <string name="Please_open_location">Pakibuksan ang lokasyon</string>
 </resources>
