--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -170,5 +170,5 @@
     <string name="thirty_minutes_in_advance">30 minutos antes</string>
     <string name="a_day_ago">hace 1 día</string>
     <string name="two_days_ago">hace 2 días</string>
-
+    <string name="Please_open_location">Por favor, abra la ubicación</string>
 </resources>
